2009-02-19  Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectBuilder.m:
	(prebuildCheck): Swap button names.

2009-02-17  Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectBuilder.m: Cleanup.
	* Framework/PCEditorManager.m:
	(openEditorForFile:editable:windowed:): Add alert panel that
	ordeder front when file to open doesn't exist. Remove commented
	out call to [self orderFrontEditorForFile:filePath] (this method
	should be called directly to PCEditorManager or PCProjectEditor
	classes).
	* Documentation/TODO: Added "Fix reported bugs" to list.

2009-02-16  Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectManager.m:
	(close): Implemented. Closes not only project but also non
	project files editors.
	* Framework/PCProject.m: Clean and alert panels in various situations.
	* Framework/PCProjectEditor.m: Move closeAllEditors, saveEditedFiles:,
	saveAllFiles and saveFileAs: methods to PCEditorManager.
	(saveFileAs:): Use superclass method.
	* Framework/PCEditorManager.m: Adopt moved methods.
	(modifiedFiles): Implemented. Return array of file paths.
	(hasModifiedFiles): Implemented for future use (e.g. prebuild check
	in ProjectBuilder).
	(reviewUnsaved:): Implemented. Go through modified files' editors
	and close which results in opening of alert "Save?" panels.
	* PCAppController.m: 
	(applicationShouldTerminate:): Use PCProjectManager close method
	instead of closeAllProjects.
	* Modules/Editors/ProjectCenter/PCEditor.m:
	(_createWindow): Set "edited" flag according to current state.
	* Framework/PCProjectBuilder.m:
	(prebuildCheck): Check if project has edited files.

2009-02-15 14:14-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m: Detect when the
	program has stopped or exited so that status can be displayed.

2009-02-15  Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectBrowser.m:
	(click:): Do not call editor if subproject name selected.