@@ -1,0 +1,22 @@
+{
+    "## Comment" = "Do NOT change this file, Gorm maintains it";
+    FirstResponder = {
+	Actions = (
+	    "buttonClicked:"
+	);
+	Super = NSObject;
+    };
+    SaveModifiedFilesDelegate = {
+	Actions = (
+	    "buttonClicked:"
+	);
+	Outlets = (
+	    alternateButton,
+	    defaultButton,
+	    panel,
+	    otherButton,
+	    filesList
+	);
+	Super = NSObject;
+    };
+}
